# quant-research

./: README.md  crypto-kalman-reversion
ar-garch-index-additions/: AR-GARCH.py
cpp-crpyto-engine/: README.md
cpp-crpyto-engine/python-websocket/: coinbase_l2_stream.py
cpp-crpyto-engine/src/: ChartRenderer.hpp  MessageReceiver.cpp  Order.cpp  Order.hpp  OrderBook.cpp  PriceBuffer.cpp  PriceBuffer.hpp  SharedMemoryReader.cpp  main.cpp
cross-sectional-momentum/: 1_filter-top-1500-liquidity.py  2_3_filter-outliers.py  5_portfolio-weighting.py  README.md  requirements.txt
cross-sectional-momentum/cross-sectional-momentum/: 6_backtest.py
cross-sectional-momentum/scripts/: 0_fetch_stock_universe.py  5_portfolio-weighting.py
crypto-kalman-reversion/: README.md
crypto-kalman-reversion/scripts/: LINK_paper_trades.csv  constants.py  filter_liquidity.py  mean_reversion.py  paper_trader.py  requirements.txt
crypto-trading-engine/: README.md
crypto-trading-engine/src/: CandleBuffer.cpp  (+3 more)
heston-bsm-volatility/: README.md
index-inclusion-strategies/: README.md
low-latency-crypto-engine/: README.md
low-latency-crypto-trading-engine/: CMakeLists.txt  README.md
low-latency-crypto-trading-engine/python-websocket/: binary_structs.py
low-latency-crypto-trading-engine/src/: CandleBuffer.hpp  OrderBook.hpp  SharedMemoryReader.hpp
mean-estimator-drift-study/: crossover_gamma.py
momentum-index-additions/: Momentum.py
pairs-trading-kalman/: README.md  bayes-optimization-kalman.py  pairs-trading-kalman.py  requirements.txt
passive-momentum/: README.md
(+6 files in other folders)
